# popcorn-kernels

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  compile_code.py  compile_logs.txt  create_dataset.py  dataset.json  filtered_uuids.json  generate_random_torch.py  generate_synth_torch.py  kick_synth_gen.sh  operators.py  out.txt  prompts.toml  requirements.txt  test.py  utils.py
cleaned_triton/: 000727f5-10f0-4186-ad1d-98f377c51f22.py  002f98d6-2f12-4a9e-adb4-ca980b4b77fd.py  007d3203-ddaa-4344-ad24-5438938e78fd.py  00bf8f60-0367-4c64-b7c6-111709465d6c.py  00d7d30e-de4b-4d35-91de-43880ccc8221.py  0143e31e-5b1e-46b0-b51c-f768d6bed883.py  01b0d66b-8d6e-4f49-9803-07c73c0dfee5.py  0232a1d1-c7a1-47ac-8ce5-35871a3dc543.py  03fdc34a-22af-4bb2-8c12-dad84143b675.py  04f72e11-221a-4a10-90e6-10cce4ec010e.py  06c75fbc-e178-47a4-b407-16701b8ac202.py  07e34d22-b593-4780-9217-3e2da6347b55.py  08b8ad7e-15dc-427d-82d1-b0bc18676925.py  09423269-bcef-4dca-9673-b2bb18519e36.py  09f9e755-3dde-4b08-87a7-b2e408079e19.py  (+267 more)
github_pytorch_scraper/: .gitignore  check_download_data.py  code_transforms.py  convert_dataset.py  create_dataset.py  create_triton_data.py  extract.py  filters.py  pyproject.toml  run_and_check.py  stack_crawl.py  utils.py
github_pytorch_scraper/paritybench/: crawler.py  evaluate.py  module_extractor.py  static_analysis.py  utils.py
github_pytorch_scraper/scripts/: eval_and_create.sh  run_full_pipline.sh  utils.sh
github_pytorch_scraper/synthetic_data_examples/: Conv3d_Mish_Tanh.py  ConvTranspose3d_AvgPool_Clamp_Softmax_Multiply.py
(+1551 files in other folders)
